--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -2271,6 +2271,11 @@ form#webform-submission-contact-node-14-add-form {
     .form-type-select {
       margin: 0;
     }
+
+    #edit-preferred-date-and-time-date {
+      display: inline-block;
+      width: auto;
+    }
   }
 }
 
